--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/typeorm": "^10.0.2",
+    "dotenv": "^16.4.5",
     "mysql2": "^3.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "shortid": "^2.2.16",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20"
@@ -39,6 +42,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/shortid": "^0.0.32",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
